--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,78 @@
-.App {
-  text-align: center;
+.App-logo.fallback-wrap {
+  pointer-events: none;
+  height: 50vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Fallback-section {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  scroll-behavior: smooth;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 2s linear;
+  }
+  .App-logo.header-wrap {
+    animation: App-logo-spin infinite 10s alternate-reverse;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+  min-height: 100vh;
+  min-width: 100vw;
+  /* border: 1px solid white; */
 }
 
-.App-link {
+.App-header {
+  padding-inline: 30px;
+  display: flex;
+  max-width: 100vw;
+  height: 100px;
+  justify-content: space-between;
+  /* border: 1px solid white; */
+}
+
+.App-logo.header-wrap{
+  height: 80px;
+  pointer-events: none;
+}
+
+.header-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-content {
+  display: flex;
   color: #61dafb;
+  /* border: 1px solid white; */
+}
+
+.header-links {
+  display: flex;
+  margin-left: auto;
+  font-size: 22px;
+  list-style: none;
+  align-items: center;
+}
+
+.header-links li {
+margin-right: 10px;
+}
+
+.Resume-box {
+  border: solid #61dafb 1px;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 18px;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +82,55 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-wrap {
+  width: 100%;
+  max-height: 100vh;
+  padding-inline: 100px;
+}
+
+.mf-wrapper {
+  /* border: 1px solid whitesmoke; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  min-height: 100vh;
+  top: 0%;
+}
+
+.mf-para.title {
+  color: bisque;
+  /* border: 2px solid white; */
+  margin: 0 0 14px 0px;
+}
+
+.mf-para.desc {
+  color: aquamarine;
+  margin: 32px 0 0 0;
+  width: 60vw;
+  text-align: left;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: larger;
+  line-height: 1.5;
+}
+
+.mf-headers#name{
+  color: azure;
+}
+
+.mf-headers#role{
+  color: cornsilk;
+  font-size: 30px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+a {
+  color: aquamarine;
+  text-decoration: none;
+}
+
+a:hover {
+  content: 'Hey';
 }
