--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+button, a {
+  border: 2px solid whitesmoke;
+  color: whitesmoke;
+  background-color: transparent;
+}
+
+a:hover {
+  color: black;
+  background-color: whitesmoke;
+  cursor: pointer;
+}
+
+h3 {
+  color: white;
+  font-size: 40px;
+}
+
+
+a {
+  text-decoration: none;
+}
+
 .App-logo.fallback-wrap {
   pointer-events: none;
   height: 50vh;
@@ -17,7 +39,7 @@
     animation: App-logo-spin infinite 2s linear;
   }
   .App-logo.header-wrap {
-    animation: App-logo-spin infinite 10s alternate-reverse;
+    animation: Header-logo-spin infinite 10s alternate-reverse;
   }
 }
 
@@ -84,10 +106,21 @@ margin-right: 10px;
   }
 }
 
+@keyframes Header-logo-spin {
+  from {
+    transform: rotate(0deg);
+  } 
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .main-wrap {
   width: 100%;
   max-height: 100vh;
   padding-inline: 100px;
+  position: absolute;
+  /* border: 1px solid whitesmoke; */
 }
 
 .mf-wrapper {
@@ -97,40 +130,58 @@ margin-right: 10px;
   align-items: flex-start;
   justify-content: center;
   min-height: 100vh;
-  top: 0%;
 }
 
 .mf-para.title {
   color: bisque;
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
   /* border: 2px solid white; */
-  margin: 0 0 14px 0px;
 }
 
 .mf-para.desc {
-  color: aquamarine;
-  margin: 32px 0 0 0;
-  width: 60vw;
+  color: #c6c7c5;
+  margin: 40px 0 0 0;
+  width: 40vw;
   text-align: left;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: larger;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 18px;
   line-height: 1.5;
 }
 
 .mf-headers#name{
-  color: azure;
+  color: whitesmoke;
+  font-size: 100px;
+  background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #f3ec78, #9b2849);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
+
 
 .mf-headers#role{
-  color: cornsilk;
+  color: gainsboro;
+  font-size: 40px;
+  font-family: sans-serif;
+}
+
+.mf-ct {
+  /* border: 1px solid white; */
+  display: flex;
+  justify-content: flex-start;
+  margin: 30px 0px 0px 0px;
+  max-height: max-content;
+}
+.mf-ct a {
+  padding: 23px 30px;
+  border-radius: 8px;
+}
+
+.footer-fin 
+{
+  color: snow;
   font-size: 30px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-a {
-  color: aquamarine;
-  text-decoration: none;
-}
-
-a:hover {
-  content: 'Hey';
 }
