--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,11 @@
-button, a {
-  border: 2px solid whitesmoke;
-  color: whitesmoke;
-  background-color: transparent;
-}
-
-a:hover {
-  color: black;
-  background-color: whitesmoke;
-  cursor: pointer;
-}
-
 h3 {
-  color: white;
   font-size: 40px;
 }
 
 
 a {
   text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .App-logo.fallback-wrap {
@@ -35,12 +23,12 @@ a {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App-logo.fallback-wrap {
     animation: App-logo-spin infinite 2s linear;
   }
-  .App-logo.header-wrap {
+  /* .App-logo.header-wrap {
     animation: Header-logo-spin infinite 10s alternate-reverse;
-  }
+  } */
 }
 
 .App {
@@ -70,11 +58,17 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 25px;
+}
+
+.header-image:hover {
+  transform: scale(1.5);
+  animation: Header-logo-spin infinite 5s linear;
 }
 
 .header-content {
   display: flex;
-  color: #61dafb;
+  /* color: #61dafb; */
   /* border: 1px solid white; */
 }
 
@@ -91,7 +85,6 @@ margin-right: 10px;
 }
 
 .Resume-box {
-  border: solid #61dafb 1px;
   border-radius: 10px;
   padding: 10px;
   font-size: 18px;
@@ -133,14 +126,12 @@ margin-right: 10px;
 }
 
 .mf-para.title {
-  color: bisque;
   font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
   /* border: 2px solid white; */
 }
 
 .mf-para.desc {
-  color: #c6c7c5;
   margin: 40px 0 0 0;
   width: 40vw;
   text-align: left;
@@ -150,20 +141,11 @@ margin-right: 10px;
 }
 
 .mf-headers#name{
-  color: whitesmoke;
   font-size: 100px;
-  background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #f3ec78, #9b2849);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
 }
 
 
 .mf-headers#role{
-  color: gainsboro;
   font-size: 40px;
   font-family: sans-serif;
 }
@@ -171,17 +153,49 @@ margin-right: 10px;
 .mf-ct {
   /* border: 1px solid white; */
   display: flex;
-  justify-content: flex-start;
-  margin: 30px 0px 0px 0px;
-  max-height: max-content;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
+
+.ct-content {
+  margin: 30px;
+}
+
 .mf-ct a {
   padding: 23px 30px;
   border-radius: 8px;
 }
 
+.mf-ct.ic{
+  /* border: 1px solid white; */
+  margin: 40px 0px;
+  display: flex;
+  align-items: inherit;
+  height: fit-content;
+  width: 50vw;
+}
+
 .footer-fin 
 {
+  display: flex;
+  padding: 2%;
+  justify-content: center;
   color: snow;
-  font-size: 30px;
+  font-size: 12px;
+}
+
+.social-container {
+  /* border: 1px solid greenyellow; */
+  height: 100vh;
+  display: flex;
+  pointer-events: none;
+  /* background: greenyellow; */
+}
+
+.insta-container {
+  background-color: aliceblue;
+  width: fit-content;
+  height: 80px;
 }
