--- a/src/css/dark-theme.css
+++ b/src/css/dark-theme.css
@@ -2,13 +2,29 @@ body {
     background: black;
 }
 
-button, a {
+a {
+  color: rgb(235, 34, 34);
+}
+
+  .f-contact {
+    border: 2px solid whitesmoke;
+    color: whitesmoke;
+    background-color: transparent;
+  }
+
+  .Resume-box {
     border: 2px solid whitesmoke;
     color: whitesmoke;
     background-color: transparent;
   }
   
-  a:hover {
+  .Resume-box:hover {
+    color: black;
+    background-color: whitesmoke;
+    cursor: pointer;
+  }
+
+  .mf-ct.ic :hover{
     color: black;
     background-color: whitesmoke;
     cursor: pointer;
@@ -21,10 +37,6 @@ button, a {
 
   .header-content {
       color: aliceblue;
-  }
-
-  .Resume-box {
-    border: solid #61dafb 1px;
   }
 
   .mf-para.title {
@@ -61,4 +73,20 @@ button, a {
 
 .ct-content {
     color: whitesmoke;
+  }
+
+  img.s-logo {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);   
+  }
+
+  img.s-logo:hover {
+    -webkit-filter: none;
+    filter: none; 
+    cursor: pointer;
+    transform: scale(1.2);
+  }
+
+  Footer:hover a {
+    transform: scale(1.5);
   }
