--- a/src/css/App.css
+++ b/src/css/App.css
@@ -34,9 +34,12 @@ a {
   padding-inline: 40px;
   display: flex;
   width: 100vw;
-  height: 12vh;
+  height: 10vh;
   align-items: center;
-  position: absolute;
+}
+
+.profile-header--wrap{
+  position: fixed;
   z-index: 1;
 }
 
@@ -52,12 +55,6 @@ a {
   margin-left: auto;
   font-size: 22px;
 }
-
-.Resume-box {
-  border-radius: 10px;
-  padding: 10px;
-  font-size: 18px;
-} 
 
 @keyframes App-logo-spin {
   from {
@@ -189,4 +186,15 @@ a {
   background-color: #a69db9;
   width: 1px;
   height: 100px;
+}
+
+.onscroll-shadow {
+  box-shadow: 0 3px 10px #3c3c3c;
+  background-color: whitesmoke;
+  background-image: linear-gradient(45deg, #6d3ec5, #df1951);
+  transition: 3s ease-in 1s;
+}
+
+.onscroll-shadow a {
+  color: whitesmoke;
 }
