--- a/src/css/dark-theme.css
+++ b/src/css/dark-theme.css
@@ -39,20 +39,6 @@ Footer a:hover {
     cursor: pointer;
     border: 0px;
   }
-  
-
-  .Resume-box {
-    border: 1px solid #d696f0;
-    color: #d696f0;
-    background-color: transparent;
-  }
-  
-  .Resume-box:hover {
-    color: #000;
-    background-color: #F7DC6F;
-    cursor: pointer;
-    border: 0px;
-  }
 
   h3 {
     color: white;
@@ -128,4 +114,40 @@ Footer a:hover {
 
   Footer:hover a {
     transform: scale(1.5);
+  }
+
+  .header-links {
+    position: relative;
+  }
+
+  .hover-link:hover ::after{
+    width: 100%;
+    left: 0;
+    background-color: whitesmoke;
+    background-image: linear-gradient(45deg, #6d3ec5, #df1951);
+  }
+
+  .onscroll-shadow .hover-link:hover ::after{
+    width: 100%;
+    left: 0;
+    background-color: whitesmoke;
+    background-image: none;
+  }
+
+  .hover-link ::after{
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    transition: width .3s ease 0s,left .3s ease 0s;
+    width: 0%;
+    color: #1fdb84;
+  }
+
+  .Resume-box {
+    color: #F7DC6F;
+    line-height: 2.13;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
