--- a/src/css/App.css
+++ b/src/css/App.css
@@ -31,7 +31,6 @@ a {
 }
 
 .App-header {
-  padding-inline: 40px;
   display: flex;
   width: 100vw;
   height: 10vh;
@@ -52,7 +51,7 @@ a {
 }
 
 .header-content {
-  margin-left: auto;
+  margin-left: 100px;
   font-size: 22px;
 }
 
@@ -68,14 +67,13 @@ a {
 .main-wrap {
   width: 100%;
   max-height: 100vh;
-  padding-inline: 100px;
   position: relative;
 }
 
 .mf-wrapper {
   padding-left: 120px;
   padding-top: 140px;
-  height: 740px;
+  height: 90vh;
 }
 
 .content-wpr {
@@ -168,13 +166,12 @@ a {
 }
 
 .social-container-wrap {
-  position: fixed;
-  left: 0;
   width: 100px;
   height: 789px;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  border: 1px solid #000;
 }
 
 .s-logo {
@@ -192,9 +189,12 @@ a {
   box-shadow: 0 3px 10px #3c3c3c;
   background-color: whitesmoke;
   background-image: linear-gradient(45deg, #6d3ec5, #df1951);
-  transition: 3s ease-in 1s;
+  transition: 5s ease-in 1s;
 }
 
-.onscroll-shadow a {
-  color: whitesmoke;
+.Resume-box {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: smaller;
+
 }
+
