--- a/src/v2/styles/global.css
+++ b/src/v2/styles/global.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   border: 0;
   scroll-behavior: smooth;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1 {
@@ -15,19 +16,94 @@ h3 {
   font-size: 70px;
 }
 
+h2 {
+  font-size: 100px;
+}
+
+h4 {
+  font-size: 50px;
+}
+
+h5 {
+  font-size: 50px;
+}
+
 p {
   font-size: 19px;
 }
 
 .links {
-    text-decoration: none;
+  text-decoration: none;
+  color: rgb(14, 207, 14);
 }
 
 .sec-btn {
-    border: 2px solid #969696;
-    display: block;
-    padding: 10px;
-    border-radius: 8px;
-    color: rgb(53, 54, 54);
-    font-weight: bolder;
+  border: 2px solid #969696;
+  display: block;
+  padding: 10px;
+  border-radius: 8px;
+  color: rgb(53, 54, 54);
+  font-weight: bolder;
+}
+
+.shadow {
+  background-color: rgb(42, 43, 43);
+  box-shadow: 1px 0.5px 13px #000;
+}
+
+.common-vector {
+  height: 80px;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
+
+.nav-list {
+  margin: auto 0;
+  list-style: none;
+  color: whitesmoke;
+  display: flex;
+  padding-inline-start: 20px;
+}
+.nav-list li {
+  margin-left: 35px;
+  font-size: large;
+  position: relative;
+}
+
+.nav-list li a {
+  color: whitesmoke;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 2;
+}
+
+.nav-list li ::after {
+  content: "";
+  background-color: aqua;
+  width: 0;
+  left: 50%;
+  position: absolute;
+  height: 2px;
+  bottom: 0;
+  display: block;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+}
+
+.nav-list li:hover ::after {
+  width: 100%;
+  left: 0%;
+}
+
+footer {
+  width: 100%;
+  background-color: rgb(15, 15, 15);
+  color: whitesmoke;
+  text-align: center;
+  padding: 10px 0;
 }
