--- a/src/v2/styles/home.css
+++ b/src/v2/styles/home.css
@@ -9,6 +9,18 @@
   -moz-text-fill-color: transparent;
 }
 
+.common-vector.home-arrow {
+  height: 80px;
+  opacity: 0.5;
+  fill: white;
+}
+
+.common-vector.home-arrow:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  fill: #76acf3;
+}
+
 .home-name {
   width: 100%;
   height: 782px;
