--- a/src/v2/styles/home.css
+++ b/src/v2/styles/home.css
@@ -18,7 +18,6 @@
 .common-vector.home-arrow:hover {
   cursor: pointer;
   opacity: 0.8;
-  fill: #76acf3;
 }
 
 .home-name {
@@ -48,14 +47,13 @@
 }
 
 .home-hero-article {
-  margin: 20px auto;
+  margin: auto;
   width: 100%;
-  height: 30%;
-  padding: 50px 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
   line-height: 1.8;
+  height: 500px;
 }
 
 .home-hero-article .hero-sectoion-content img {
@@ -68,18 +66,21 @@
 
 .hero-sectoion-content {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  width: 60%;
-  color: #627597;
+  justify-content: space-around;
+  width: 50%;
+  height: 80%;
+  color: #000;
   padding: 3% 0;
-  box-shadow: 0px 2px 8px #627597;
-  border-radius: 10px;
+  opacity: 0.5;
+  border-radius: 20px;
+  /* background-color: rgb(228, 81, 23); */
 }
 
 .hero-sectoion-content:hover {
-  box-shadow: 0px 2px 30px #76acf3;
-  color: #000000;
+  box-shadow: 0px 2px 20px #5c9ff8;
+  opacity: 1;
 }
 
 .home-contact {
@@ -124,19 +125,21 @@
 }
 
 .social-cards div {
-  padding: 20px;
+  padding: 40px;
+  /* border: 1px solid #000; */
 }
 
 .social-cards img {
-  height: 80px;
+  height: 60px;
 }
 
 .social-cards div:hover {
-  background-color: rgb(192, 223, 252);
+  background-color: rgb(250, 34, 88);
 }
 
 .main-container .tech {
-  background-color: #70ddf8;
+
+  background: linear-gradient(70deg, #4403ad, #8f78f3);
   width: 100%;
   height: 100vh;
 }
