--- a/src/v2/styles/global.css
+++ b/src/v2/styles/global.css
@@ -47,7 +47,7 @@ p {
 }
 
 .shadow {
-  background-color: rgb(42, 43, 43);
+  background-color: rgba(53, 53, 53, 0.918);
   box-shadow: 1px 0.5px 13px #000;
 }
 
@@ -60,8 +60,10 @@ header {
   width: 100%;
   height: 70px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
   z-index: 10;
+  justify-content: space-between;
 }
 
 .nav-list {
@@ -75,17 +77,24 @@ header {
   margin-left: 35px;
   font-size: large;
   position: relative;
+  font-weight: bolder;
+}
+
+
+header .github-icon > img{
+  height: 35px;
+  margin-right: 30px;
 }
 
 .nav-list li a {
   color: whitesmoke;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 2;
 }
 
 .nav-list li ::after {
   content: "";
-  background-color: aqua;
+  background-color: whitesmoke;
   width: 0;
   left: 50%;
   position: absolute;
@@ -102,8 +111,16 @@ header {
 
 footer {
   width: 100%;
-  background-color: rgb(15, 15, 15);
+  /* background-color: #33253a; */
+  background-color: #3b2e3a;
   color: whitesmoke;
   text-align: center;
-  padding: 10px 0;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-content p {
+  margin-top: 70px;
+  font-size: small;
 }
