--- a/src/v2/styles/home.css
+++ b/src/v2/styles/home.css
@@ -1,7 +1,7 @@
 #name {
   font-size: 240px;
   text-align: center;
-  background-image: linear-gradient(145deg, #2ef7dc, #f57373 70%);
+  background-image: linear-gradient(145deg, #2ef7dc, #f7ec5b 70%);
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -38,59 +38,83 @@
 }
 
 #punch-line {
-  padding: 50px 0;
-  /* color: #627597!important; */
-  text-align: center;
   width: 100%;
-  background-image: linear-gradient(45deg, #6d3ec5, #df1951);
-  color: whitesmoke;
-}
-
-.home-hero-article {
-  margin: auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  line-height: 1.8;
-  height: 500px;
-}
-
-.home-hero-article .hero-sectoion-content img {
-  height: 110px;
-}
-
-.home-hero-article .arrow {
-  transform: rotate(270deg);
-}
-
-.hero-sectoion-content {
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  width: 50%;
-  height: 80%;
-  color: #000;
-  padding: 3% 0;
-  opacity: 0.5;
-  border-radius: 20px;
-  /* background-color: rgb(228, 81, 23); */
+  justify-content: center;
+  font-family: monospace;
+  /* color: #f7d723;; */
+  color: #3c926e;
+  /* background-color: rgb(50, 82, 72); */
+  background-color: #f7d723;
 }
 
-.hero-sectoion-content:hover {
-  box-shadow: 0px 2px 20px #5c9ff8;
-  opacity: 1;
+#punch-line h3 {
+  font-size: 100px;
+}
+
+.main-container .tech {
+  width: 100%;
+  height: max-content;
+}
+
+
+.home-hero-article {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-section-content > h3 {
+  background-color: rgb(5, 155, 107);
+  background-image: linear-gradient(45deg, #6d3ec5, #df1951);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.home-hero-article .hero-section-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100%;
+  width: 80%;
+}
+
+.home-hero-article .hero-section-content img {
+  height: 130px;
+}
+
+.hero-section-content .description{
+  color: #627597;
+  line-height: 1.8;
+  width: 100%;
+  font-weight: medium;
+  text-align: center;
+  font-size: 30px;
+}
+
+.hero-section-content .links{
+  color: #3c926e;
+  font-weight: bold;
 }
 
 .home-contact {
-  height: max-content;
+  height: 80vh;
   width: 100%;
   padding: 30px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 0 auto;
 }
 
@@ -134,12 +158,7 @@
 }
 
 .social-cards div:hover {
-  background-color: rgb(250, 34, 88);
+  /* background-color: rgb(250, 34, 88); */
+  background-color: #3c926e;
 }
 
-.main-container .tech {
-
-  background: linear-gradient(70deg, #4403ad, #8f78f3);
-  width: 100%;
-  height: 100vh;
-}
