--- a/src/v2/styles/global.css
+++ b/src/v2/styles/global.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
   border: 0;
   scroll-behavior: smooth;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
@@ -13,7 +13,7 @@ h1 {
 }
 
 h3 {
-  font-size: 70px;
+  font-size: 50px;
 }
 
 h2 {
@@ -21,11 +21,11 @@ h2 {
 }
 
 h4 {
-  font-size: 50px;
+  font-size: 35px;
 }
 
 h5 {
-  font-size: 50px;
+  font-size: 20px;
 }
 
 p {
@@ -34,7 +34,45 @@ p {
 
 .links {
   text-decoration: none;
-  color: rgb(14, 207, 14);
+  color: #df1951;
+  font-weight: bold;
+}
+
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
 }
 
 .sec-btn {
@@ -47,7 +85,7 @@ p {
 }
 
 .shadow {
-  background-color: rgba(53, 53, 53, 0.918);
+  background-color: #161616;
   box-shadow: 1px 0.5px 13px #000;
 }
 
@@ -80,22 +118,22 @@ header {
   font-weight: bolder;
 }
 
-
-header .github-icon > img{
+header .github-icon > img {
   height: 35px;
   margin-right: 30px;
 }
 
 .nav-list li a {
   color: whitesmoke;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   line-height: 2;
 }
 
 .nav-list li ::after {
-  content: "";
+  content: '';
   background-color: whitesmoke;
-  width: 0;
+  /* width: 0; */
   left: 50%;
   position: absolute;
   height: 2px;
@@ -107,20 +145,4 @@ header .github-icon > img{
 .nav-list li:hover ::after {
   width: 100%;
   left: 0%;
-}
-
-footer {
-  width: 100%;
-  /* background-color: #33253a; */
-  background-color: #3b2e3a;
-  color: whitesmoke;
-  text-align: center;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-}
-
-.footer-content p {
-  margin-top: 70px;
-  font-size: small;
 }
